RESOLVED FIXED279843
Null dereference crash of pageClient under WebPageProxy::performDragOperation()
https://bugs.webkit.org/show_bug.cgi?id=279843
Summary Null dereference crash of pageClient under WebPageProxy::performDragOperation()
Chris Dumez
Reported 2024-09-17 14:25:21 PDT
Null dereference crash of pageClient under WebPageProxy::performDragOperation().
Attachments
Chris Dumez
Comment 1 2024-09-17 14:25:28 PDT
Chris Dumez
Comment 2 2024-09-17 14:27:48 PDT
EWS
Comment 3 2024-09-17 18:57:10 PDT
Committed 283815@main (031f29e819d1): <https://commits.webkit.org/283815@main> Reviewed commits have been landed. Closing PR #33788 and removing active labels.
EWS
Comment 4 2024-09-18 18:36:40 PDT
Committed 283286.89@safari-7620-branch (e945b0d54ec3): <https://commits.webkit.org/283286.89@safari-7620-branch> Reviewed commits have been landed. Closing PR #1840 and removing active labels.
EWS
Comment 5 2024-09-19 12:22:24 PDT
Committed 280938.359@safari-7619-branch (e131721d29ab): <https://commits.webkit.org/280938.359@safari-7619-branch> Reviewed commits have been landed. Closing PR #1848 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.