Null dereference crash of pageClient under WebPageProxy::performDragOperation() https://bugs.webkit.org/show_bug.cgi?id=279843 rdar://135517174

Reviewed by Ryosuke Niwa.

Null check the pageClient before using it.
In a follow-up, I'll make this API less error prone but I'm intentionally
keeping this PR small so it can get cherry-picked.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::performDragOperation):

Canonical link: https://commits.webkit.org/283815@main